# kafka-spark-fraud-detection

./: .env  .gitignore  README.md  comandos.txt  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
docs/: convenciones_proyecto.md  data_pipeline.md  dataset_PaySim1.md  dev_checklist.md  developer_guide.md  tests.md
src/config/: config_loader.py  validate_config.py
src/fraud_detection/config/: config_loader.py  validate_config.py
src/fraud_detection/consumer/: paysim_consumer.py
src/fraud_detection/preprocess/: helpers.py  preprocess_paysim.py
src/fraud_detection/producer/: paysim_producer.py
src/fraud_detection/utils/: logging_setup.py
src/kafka_spark_fraud_detection.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/utils/: logging_setup.py
tests/: test_imports.py
tests/config/: test_config_loader.py  test_validate_config.py
tests/infraestructure/: test_docker_containers.py
tests/kafka/: test_kafka_producer_consumer.py
tests/preprocess/: test_preprocess_integration.py  test_preprocess_paysim.py  test_raw_dataset_structure.py
